--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="hint_title">Title goes here</string>
     <string name="hint_subtitle">And subtitle goes here</string>
     <string name="image_details">Details</string>
+    <string name="your_kb">%1$d kb</string>
+    <string name="your_dimension">%1$s x %2$s</string>
 </resources>
